# example-mcp-server

./: main.py  pyproject.toml
data/: sample1.csv
data/subdir/: sample2.csv
src/example_mcp/: server.py
src/example_mcp/tools/: csv_reader.py
src/example_mcp_server/: main.py
